<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CostCalendar"
    tools:showIn="@layout/activity_calendar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/calendar_total_label"
            style="@style/CalendarTotal"
            android:text="@string/calendar_total_label"
            app:layout_constraintRight_toLeftOf="@id/calendar_total"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/calendar_total"
            style="@style/CalendarTotal"
            android:text="2000"
            app:layout_constraintRight_toLeftOf="@id/calendar_total_currency"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/calendar_total_currency"
            style="@style/CalendarTotal"
            android:text="@string/RON"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TableRow
        android:id="@+id/hr1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Spinner
            android:id="@+id/year_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cost_item_margin"
            android:layout_weight="1"
            android:paddingTop="@dimen/spinner_padding"
            android:paddingBottom="@dimen/spinner_padding"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/month_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/cost_item_margin"
            android:layout_weight="1"
            android:entries="@array/months_array"
            android:paddingTop="@dimen/spinner_padding"
            android:paddingBottom="@dimen/spinner_padding"
            android:textAlignment="center" />

    </LinearLayout>

    <TableRow
        android:id="@+id/hr2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/empty_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/empty_costs"
        android:textAlignment="center"
        android:visibility="invisible" />

</LinearLayout>